--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,7 +1,6 @@
 .main {
     flex : 1;
     min-height: 100vh;
-    padding-bottom: 15vh;
     position: relative;
 }
 
@@ -10,110 +9,124 @@
     align-items: center;
     justify-content: space-between;
     font-size: 20px;
+    font-weight: 500;
     padding: 20px;
-    color: #282828;
+    padding-bottom: 5px;
+    color: #585858
 }
 
 .main .nav img {
     width: 40px;
-    border-radius: 50px;
+    height: 40px;
+    border-radius: 50%;
 }
 
 .main-container {
-    max-width: 900px;
+    max-width: 850px;
     margin: auto;
 }
 
-.main .greet{
+.main .greet {
     margin: 50px 0px;
-    font-size: 56px;
+    font-size: 40px;
     color: #c4c7c5;
     font-weight: 500;
-    padding: 20px;
+    padding: 10px 20px;
+    padding-bottom: 5px;
 }
 
 .main .greet span {
-    background: -webkit-linear-gradient(16deg,#4b90ff,#ff5546);
+    background: -webkit-linear-gradient(16deg, #4b90ff, #ff5546);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    font-size: 45px;
 }
 
 .main .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(150px,1fr));
     gap: 15px;
-    padding: 20px; 
+    padding: 25px;
 }
 
+
 .main .card {
-    height: 200px;
-    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 140px;
+    padding: 12px;
     background-color: #f0f4f9;
-    border-radius: 10px;
-    position: relative;
+    border-radius: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .main .card img {
-    width: 35px;
-    padding: 5px;
-    position: absolute;
+    width: 25px;
+    height: 25px;
     background-color: white;
-    border-radius: 20px;
-    bottom: 10px;
-    right: 10px;
-}
-
-.main .card {
-    color: #585858;
-    font-size: 17px;
+    border-radius: 50%;
+    align-self: flex-end;
 }
 
 .main .card:hover {
     background-color: #dfe4ea;
 }
 
-.main-bottom {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    max-width: 900px;
-    padding: 0px 20px;
-    margin: auto;
+.main .card p {
+    color: #585858;
+    font-size: 15px;
 }
 
- .search-box {
+.main-bottom {
+    margin-bottom: 0;
+    margin-top: auto;
+    width: 100%;
+    padding: 20px;
+    padding-top: 36px;
+    padding-bottom: 0px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.search-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 5px;
     background-color: #f0f4f9;
-    padding: 10px 20px;
-    border-radius: 50px;
- }
+    padding: 10px 15px;
+    border-radius: 30px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
 
- .search-box img {
+.search-box img {
     width: 24px;
     cursor: pointer;
- }
+}
 
- .search-box input {
+.search-box input {
     flex: 1;
     background-color: transparent;
     border: none;
     outline: none;
-    padding: 8px;
-    font-size: 18px;
- }
+    font-size: 16px;
+    padding: 5px;
+}
 
- .search-box div {
+.search-box div {
     display: flex;
     align-items: center;
-    gap: 15px;
- }
+    gap: 10px;
+}
 
- .main .bottom-info {
-     font-size: 13px;
-     margin: 15px auto;
-     text-align: center;
-     font-weight: 300;
- }
+.main .bottom-info {
+    font-size: 12px;
+    margin: 15px auto;
+    text-align: center;
+    color: #666;
+    font-weight: 300;
+    line-height: 1.4;
+}
