--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,7 @@
 .main {
     flex : 1;
     min-height: 100vh;
+    padding-bottom: 15vh;
     position: relative;
 }
 
@@ -11,8 +12,11 @@
     font-size: 20px;
     font-weight: 500;
     padding: 20px;
-    padding-bottom: 5px;
-    color: #585858
+    color: #585858;
+}
+
+.nav p {
+    cursor: pointer;
 }
 
 .main .nav img {
@@ -22,41 +26,39 @@
 }
 
 .main-container {
-    max-width: 850px;
+    max-width: 950px;
     margin: auto;
 }
 
 .main .greet {
-    margin: 50px 0px;
+    margin: 10px 0px;
     font-size: 40px;
     color: #c4c7c5;
     font-weight: 500;
     padding: 10px 20px;
-    padding-bottom: 5px;
 }
 
 .main .greet span {
     background: -webkit-linear-gradient(16deg, #4b90ff, #ff5546);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 45px;
 }
 
 .main .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(180px,1fr));
     gap: 15px;
-    padding: 25px;
+    padding: 20px;
 }
 
 
 .main .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 140px;
-    padding: 12px;
+    height: 150px;
+    padding: 15px;
     background-color: #f0f4f9;
+    position: relative;
     border-radius: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     cursor: pointer;
@@ -64,11 +66,13 @@
 }
 
 .main .card img {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    padding: 5px;
+    position: absolute;
     background-color: white;
-    border-radius: 50%;
-    align-self: flex-end;
+    border-radius: 20%;
+    bottom: 10px;
+    right: 10px;
 }
 
 .main .card:hover {
@@ -77,18 +81,16 @@
 
 .main .card p {
     color: #585858;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .main-bottom {
-    margin-bottom: 0;
-    margin-top: auto;
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    padding: 20px;
-    padding-top: 36px;
-    padding-bottom: 0px;
-    box-sizing: border-box;
-    text-align: center;
+    max-width: 950px;
+    padding: 0px 20px;
+    margin: auto;
 }
 
 .search-box {
@@ -190,4 +192,22 @@
     font-size: 17px;
     font-weight: 300;
     line-height: 1.8;
+}
+
+@media (max-width : 600px) {
+    .main-bottom input {
+        flex:none;
+        width: 150px;
+    }
+    .main-bottom img {
+        width: 20px;
+    }
+
+    .search-box {
+        padding: 5px 10px;
+    }
+
+    .search-box div {
+        gap: 5px;
+    }
 }
